[gd_scene load_steps=2 format=3 uid="uid://cju6o4366b88p"]

[ext_resource type="Script" path="res://components/user_interface/equipment/equipment_item_control.gd" id="1_kwu1f"]

[node name="equipment_item_control" type="Control"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kwu1f")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 0
offset_right = 180.0
offset_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="label_item_name" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Item Name"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="button_container" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="button_equip_item" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/button_container"]
layout_mode = 2
text = "Equip"
